data/derived/sp14/progs/unify/prog0040.ml.out
Characters 56-58:
  | hd::tl -> hd::last tl
              ^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
